--- a/index.html
+++ b/index.html
@@ -335,6 +335,142 @@
                     </div>
                 </div>
             </section>
+            <!-- Feature -->
+            <section class="feature">
+                <div class="container">
+                    <div class="feature__body">
+                        <div class="feature__media">
+                            <figure class="feature__images">
+                                <img
+                                    src="./assets/img/hero-01.jpg"
+                                    alt=""
+                                    class="feature__img"
+                                />
+                                <img
+                                    src="./assets/img/hero-02.jpg"
+                                    alt=""
+                                    class="feature__img"
+                                />
+                            </figure>
+                        </div>
+                        <section class="feature__info">
+                            <h2 class="section-heading">
+                                Take back your smile with shine.
+                            </h2>
+                            <p class="section-desc">
+                                If you’re missing multiple teeth due to decay,
+                                injury, or the natural aging process, dentures
+                                might be the perfect solution.
+                            </p>
+                            <a href="#!" class="btn feature__btn">Learn More</a>
+                        </section>
+                    </div>
+                </div>
+            </section>
+            <!-- Member -->
+            <section class="member">
+                <div class="container">
+                    <header class="member__header">
+                        <h2 class="section-heading">Our virtual dentist</h2>
+                        <a href="" class="btn member__btn">Meet our dentist</a>
+                    </header>
+                    <div class="member__list">
+                        <!-- Item 1 -->
+                        <article class="member-item">
+                            <div class="member-item__img-bg">
+                                <img
+                                    src="./assets/img/member-1.png"
+                                    alt=""
+                                    class="member-item__thumb"
+                                />
+                            </div>
+                            <h3 class="member-item__title">Dr. Essence Page</h3>
+                            <p class="member-item__desc">
+                                DDS, California - Linda University
+                            </p>
+                        </article>
+                        <!-- Item 2 -->
+                        <article class="member-item">
+                            <div class="member-item__img-bg">
+                                <img
+                                    src="./assets/img/member-2.png"
+                                    alt=""
+                                    class="member-item__thumb"
+                                />
+                            </div>
+                            <h3 class="member-item__title">Dr. Essence Page</h3>
+                            <p class="member-item__desc">
+                                DDS, California - Linda University
+                            </p>
+                        </article>
+                        <!-- Item 3 -->
+                        <article class="member-item">
+                            <div class="member-item__img-bg">
+                                <img
+                                    src="./assets/img/member-3.png"
+                                    alt=""
+                                    class="member-item__thumb"
+                                />
+                            </div>
+                            <h3 class="member-item__title">Dr. Essence Page</h3>
+                            <p class="member-item__desc">
+                                DDS, California - Linda University
+                            </p>
+                        </article>
+                        <!-- Item 4 -->
+                        <article class="member-item">
+                            <div class="member-item__img-bg">
+                                <img
+                                    src="./assets/img/member-4.png"
+                                    alt=""
+                                    class="member-item__thumb"
+                                />
+                            </div>
+                            <h3 class="member-item__title">Dr. Essence Page</h3>
+                            <p class="member-item__desc">
+                                DDS, California - Linda University
+                            </p>
+                        </article>
+                    </div>
+                    <div class="member__control">
+                        <!-- Previous -->
+                        <button class="member__control-btn">
+                            <svg
+                                width="6"
+                                height="12"
+                                viewBox="0 0 8 14"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    d="M7 1L1 7L7 13"
+                                    stroke="currentColor"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                />
+                            </svg>
+                        </button>
+                        <!-- Next -->
+                        <button class="member__control-btn">
+                            <svg
+                                class="member__control-next-icon"
+                                width="6"
+                                height="12"
+                                viewBox="0 0 8 14"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                            >
+                                <path
+                                    d="M7 1L1 7L7 13"
+                                    stroke="currentColor"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                />
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
